--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -79,7 +79,7 @@
         <link rel="stylesheet" id="magnific-css" href="assets/css/magnific.min.css" type="text/css" media="all" />
         <link rel="stylesheet" id="venobox-css" href="assets/css/venobox.css" type="text/css" media="all" />
         <link rel="stylesheet" id="style-css" href="assets/css/style.css" type="text/css" media="all" />
-        <link rel="stylesheet" type="text/css" href="assets/css/trungtamdaotao-new.css" media="all">
+        <link rel="stylesheet" type="text/css" href="assets/css/quanlydaotao-new.css" media="all">
         <link rel="stylesheet" id="responsive-css" href="assets/css/responsive.css" type="text/css" media="all" />
         <link rel="stylesheet" id="elementor-icons-css" href="assets/css/elementor-icons.min.css" type="text/css" media="all" />
         <link rel="stylesheet" id="elementor-animations-css" href="assets/css/animations.min.css" type="text/css" media="all" />
@@ -317,7 +317,22 @@
 <!--=====================================================tun sửa=================================================================-->
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <!-- single-blog start -->
-                            <article class="blog-post-wrapper">hihihihihi<br>dgajdjagsj<br>bahsgdga</article>
+                            <article class="blog-post-wrapper">
+                                <div class="tieude_noidung">
+                                    <div class="tieude-item1">
+                                        <img src="assets/images/quanlydaotao-new/lifebalance.png">
+                                    </div>
+                                    <div class="tieude-item2">
+                                        <h5>CÁC CHƯƠNG TRÌNH TRONG NỘI DUNG ĐÀO TẠO</h5>
+                                    </div>
+                                    <div class="tieude-item3">
+                                        <img src="assets/images/quanlydaotao-new/pmcknowledge.png">
+                                    </div>
+                                </div>
+<!--=====================================================tun sửa=================================================================-->
+                                <div class="noidung">
+                                </div>
+                            </article>
                             <div class="clear"></div>
                             <!-- single-blog end -->
                         </div>
