--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -318,7 +318,7 @@
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <!-- single-blog start -->
                             <article class="blog-post-wrapper">
-                                <div class="tieude_noidung">
+                                <div class="tieude-noidung">
                                     <div class="tieude-item1">
                                         <img src="assets/images/quanlydaotao-new/lifebalance.png">
                                     </div>
@@ -330,7 +330,54 @@
                                     </div>
                                 </div>
 <!--=====================================================tun sửa=================================================================-->
-                                <div class="noidung">
+                                <div class="block-nd">
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>01</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>NHẬP MÔN LÀM SẠCH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>02</h4>
+                                        </div>
+                                        <div class="item-icon"></div>
+                                        <div class="item-text">
+                                            <h5>CHƯƠNG TRÌNH LÀM SẠCH XANH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>03</h4>
+                                        </div>
+                                        <div class="item-icon"></div>
+                                        <div class="item-text">
+                                            <h5>DỊCH VỤ KHÁCH HÀNG TRONG LĨNH VỰC LÀM SẠCH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>04</h4>
+                                        </div>
+                                        <div class="item-icon"></div>
+                                        <div class="item-text">
+                                            <h5>KIỂM SOÁT NHIỄM KHUẨN CHO NHÂN VIÊN LÀM SẠCH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>05</h4>
+                                        </div>
+                                        <div class="item-icon"></div>
+                                        <div class="item-text">
+                                            <h5>GIỚI THIỆU VỀ VỆ SINH THẢM (BẢO QUẢN HÀNG NGÀY)</h5>
+                                        </div>
+                                    </div>
                                 </div>
                             </article>
                             <div class="clear"></div>
