--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -90,7 +90,7 @@
         <script type="text/javascript" src="assets/js/modernizr-2.8.3.min.js"></script>
         <link rel="https://api.w.org/" href="http://lifebalance.vn/wp-json/" />
         <link rel="alternate" type="application/json+oembed" href="http://lifebalance.vn/wp-json/oembed/1.0/embed?url=http%3A%2F%2Flifebalance.vn%2Ftrung-tam-dao-tao%2F" />
-        <link rel="alternate" type="text/xml+oembed" href="http://lifebalance.vn/wp-json/oembed/1.0/embed?url=http%3A%2F%2Flifebalance.vn%2Ftrung-tam-dao-tao%2F&#038;format=xml" />
+        <link rel="alternate" type="text/xml+oembed" href="http://lifebalance.vn/wp-json/oembed/1.0/embed?url=http%3A%2F%2Flifebalance.vn%2Ftrung-tam-dao-tao%2F&#038;format=xml"/>
     </head>
 
     <body class="elementor-default elementor-kit-69 elementor-page elementor-page-658">
@@ -311,7 +311,7 @@
         </div>
         <div class="blog-page area-padding">
             <div class="container">
-                <div class="row" style="background:pink">
+                <div class="row">
                     <div class="blog-page-details">
                         <!-- Start main column -->
 <!--=====================================================tun sửa=================================================================-->
@@ -337,6 +337,9 @@
                                         </div>
                                         <div class="item-icon">
                                             <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon1.png">
+                                            </div>
                                         </div>
                                         <div class="item-text">
                                             <h5>NHẬP MÔN LÀM SẠCH</h5>
@@ -346,7 +349,12 @@
                                         <div class="item-num">
                                             <h4>02</h4>
                                         </div>
-                                        <div class="item-icon"></div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon2.png">
+                                            </div>
+                                        </div>
                                         <div class="item-text">
                                             <h5>CHƯƠNG TRÌNH LÀM SẠCH XANH</h5>
                                         </div>
@@ -355,7 +363,12 @@
                                         <div class="item-num">
                                             <h4>03</h4>
                                         </div>
-                                        <div class="item-icon"></div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon3.png">
+                                            </div>
+                                        </div>
                                         <div class="item-text">
                                             <h5>DỊCH VỤ KHÁCH HÀNG TRONG LĨNH VỰC LÀM SẠCH</h5>
                                         </div>
@@ -364,7 +377,12 @@
                                         <div class="item-num">
                                             <h4>04</h4>
                                         </div>
-                                        <div class="item-icon"></div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon4.png">
+                                            </div>
+                                        </div>
                                         <div class="item-text">
                                             <h5>KIỂM SOÁT NHIỄM KHUẨN CHO NHÂN VIÊN LÀM SẠCH</h5>
                                         </div>
@@ -373,9 +391,156 @@
                                         <div class="item-num">
                                             <h4>05</h4>
                                         </div>
-                                        <div class="item-icon"></div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon5.png">
+                                            </div>
+                                        </div>
                                         <div class="item-text">
                                             <h5>GIỚI THIỆU VỀ VỆ SINH THẢM (BẢO QUẢN HÀNG NGÀY)</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="block-nd">
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>06</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon6.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>KHU VỰC CHẾ BIẾN THỰC PHẨM SẠCH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>07</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon7.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>LÀM SẠCH SÀN</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>08</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon8.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>LÀM SẠCH CỬA SỔ</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>09</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon9.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>GIỚI THIỆU VỀ QUY TRÌNH LÀM SẠCH CHUYÊN NGHIỆP</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>10</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon10.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>TẨY SÀN</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="block-nd">
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>11</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon11.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>PHƯƠNG PHÁP LÀM SẠCH BẰNG HƠI NƯỚC</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>12</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon12.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>MÁY PHUN ÁP LỰC VÀ LOẠI BỎ VẾT SƠN TƯỜNG</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>13</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon13.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>LÀM SẠCH VĂN PHÒNG – LÀM SẠCH ĐỊNH KỲ</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4>14</h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
+                                            <div class="item-minicon">
+                                                <img src="assets/images/quanlydaotao-new/icon14.png">
+                                            </div>
+                                        </div>
+                                        <div class="item-text">
+                                            <h5>VAI TRÒ CỦA NGƯỜI GIÁM SÁT LÀM SẠCH</h5>
+                                        </div>
+                                    </div>
+                                    <div class="item-nd">
+                                        <div class="item-num">
+                                            <h4></h4>
+                                        </div>
+                                        <div class="item-icon">
+                                            <div class="item-minicon">
+                                            </div>
+                                        </div>
+                                        <div class="item-text1">
+                                            <h5></h5>
                                         </div>
                                     </div>
                                 </div>
@@ -452,7 +617,7 @@
                                         </div>
                                     </section>
 <!--=====================================================tun sửa=================================================================-->
-                                    <section id="categories-3" class="widget widget_categories" style="background:green">
+                                    <section id="categories-3" class="widget widget_categories">
                                         <h2 class="widget-title">Chuyên mục</h2>
                                         <ul>
                                             <li class="cat-item cat-item-26"><a href="http://lifebalance.vn/category/kinh-nghiem-cham-soc-canh-quan/">Kinh nghiệm Chăm sóc cảnh quan</a></li>
