--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -336,10 +336,7 @@
                                             <h4>01</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon1.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh1.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>NHẬP MÔN LÀM SẠCH</h5>
@@ -350,10 +347,7 @@
                                             <h4>02</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon2.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh2.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>CHƯƠNG TRÌNH LÀM SẠCH XANH</h5>
@@ -364,10 +358,7 @@
                                             <h4>03</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon3.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh3.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>DỊCH VỤ KHÁCH HÀNG TRONG LĨNH VỰC LÀM SẠCH</h5>
@@ -378,10 +369,7 @@
                                             <h4>04</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon4.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh4.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>KIỂM SOÁT NHIỄM KHUẨN CHO NHÂN VIÊN LÀM SẠCH</h5>
@@ -392,10 +380,7 @@
                                             <h4>05</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon5.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh5.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>GIỚI THIỆU VỀ VỆ SINH THẢM (BẢO QUẢN HÀNG NGÀY)</h5>
@@ -408,10 +393,7 @@
                                             <h4>06</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon6.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh6.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>KHU VỰC CHẾ BIẾN THỰC PHẨM SẠCH</h5>
@@ -422,10 +404,7 @@
                                             <h4>07</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon7.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh7.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>LÀM SẠCH SÀN</h5>
@@ -436,10 +415,7 @@
                                             <h4>08</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon8.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh8.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>LÀM SẠCH CỬA SỔ</h5>
@@ -450,10 +426,7 @@
                                             <h4>09</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon9.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh9.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>GIỚI THIỆU VỀ QUY TRÌNH LÀM SẠCH CHUYÊN NGHIỆP</h5>
@@ -464,10 +437,7 @@
                                             <h4>10</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon10.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh10.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>TẨY SÀN</h5>
@@ -480,10 +450,7 @@
                                             <h4>11</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon11.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh11.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>PHƯƠNG PHÁP LÀM SẠCH BẰNG HƠI NƯỚC</h5>
@@ -494,10 +461,7 @@
                                             <h4>12</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon12.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh12.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>MÁY PHUN ÁP LỰC VÀ LOẠI BỎ VẾT SƠN TƯỜNG</h5>
@@ -508,10 +472,7 @@
                                             <h4>13</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nentrang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon13.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh13.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>LÀM SẠCH VĂN PHÒNG – LÀM SẠCH ĐỊNH KỲ</h5>
@@ -522,26 +483,16 @@
                                             <h4>14</h4>
                                         </div>
                                         <div class="item-icon">
-                                            <img src="assets/images/quanlydaotao-new/nenvang.png">
-                                            <div class="item-minicon">
-                                                <img src="assets/images/quanlydaotao-new/icon14.png">
-                                            </div>
+                                            <img src="assets/images/quanlydaotao-new/anh14.png">
                                         </div>
                                         <div class="item-text">
                                             <h5>VAI TRÒ CỦA NGƯỜI GIÁM SÁT LÀM SẠCH</h5>
                                         </div>
                                     </div>
                                     <div class="item-nd">
-                                        <div class="item-num">
-                                            <h4></h4>
-                                        </div>
-                                        <div class="item-icon">
-                                            <div class="item-minicon">
-                                            </div>
-                                        </div>
-                                        <div class="item-text1">
-                                            <h5></h5>
-                                        </div>
+                                        <div class="item-num"><h4></h4></div>
+                                        <div class="item-icon"></div>
+                                        <div class="item-text1"><h5></h5></div>
                                     </div>
                                 </div>
                             </article>
