--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -318,13 +318,11 @@
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <!-- single-blog start -->
                             <article class="blog-post-wrapper">
+                                <div class="tieude-logo">
+                                    <img src="assets/images/quanlydaotao-new/pmcknowledge.png">
+                                </div>
                                 <div class="tieude-noidung">
-                                    <div class="tieude-item1">
-                                        <h5>CÁC CHƯƠNG TRÌNH TRONG NỘI DUNG ĐÀO TẠO</h5>
-                                    </div>
-                                    <div class="tieude-item2">
-                                        <img src="assets/images/quanlydaotao-new/pmc.png">
-                                    </div>
+                                    <h5>CÁC CHƯƠNG TRÌNH ĐÀO TẠO</h5>
                                 </div>
 <!--=====================================================tun sửa=================================================================-->
                                 <div class="block-nd">
